--- a/bcnf.ipynb
+++ b/bcnf.ipynb
@@ -1,18 +1,8 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "已知关系模式 R=(A,B,C,D,E) 以及函数依赖集合F, 若R在BCNF中，则\n",
-    "1. α-->β，α是β的超集（trivial）\n",
-    "2. α-->β，α是R的超码。\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,17 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_single_attribute_closure(alpha):\n",
+    "def calculate_single_attribute_closure(original_alpha, F):\n",
     "    \"\"\"\n",
     "    此函数用于计算单个属性的属性闭包\n",
     "    ex:\n",
-    "    输入:['A']\n",
+    "    输入:['A'], F\n",
     "    输出:['A','B','C','D','E','F'] \n",
     "    \"\"\"\n",
+    "    alpha = original_alpha.copy()\n",
     "    if alpha == []:\n",
     "        return []\n",
     "    result = alpha.copy()\n",
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +75,7 @@
     "    #to store all attribute closures 用与存储所有的属性闭包\n",
     "    attribute_closure_set = []\n",
     "    for alpha, beta in F:\n",
-    "        result = calculate_single_attribute_closure(alpha)\n",
+    "        result = calculate_single_attribute_closure(alpha, F)\n",
     "        #to eliminate duplicate attribute closure 若属性闭包未重复，则添加\n",
     "        if [alpha,sorted(result)] not in attribute_closure_set:\n",
     "            attribute_closure_set.append([alpha,sorted(result)])\n",
@@ -100,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +108,7 @@
     }
    ],
    "source": [
-    "def calculate_bad_and_good_F():\n",
+    "def calculate_bad_and_good_F(F):\n",
     "    \"\"\"\n",
     "    Find \"bad\" F and \"good\" F for BCNF\n",
     "    # do it after calculation of attribute_closure_set is finished\n",
@@ -133,7 +124,7 @@
     "                good_F.append([F_alpha, F_beta])\n",
     "    return bad_F, good_F\n",
     "\n",
-    "bad_F, good_F = calculate_bad_and_good_F()\n",
+    "bad_F, good_F = calculate_bad_and_good_F(F)\n",
     "        \n",
     "# Print bad F\n",
     "print(\"Bad F:\")\n",
@@ -148,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -180,37 +171,38 @@
     "    输入:['A','B']\n",
     "    输出:[[],['A'],['B']]\n",
     "    \"\"\"\n",
+    "    s_copy = s.copy()\n",
     "    temp = s.copy()\n",
-    "    subsets = get_subsets(s)\n",
-    "    subsets.remove(temp)\n",
+    "    subsets = get_subsets(temp)\n",
+    "    subsets.remove(s_copy)\n",
     "    return subsets\n",
     "\n",
-    "def determine_candidate_key(alpha):\n",
+    "def determine_candidate_key(alpha,F):\n",
     "    \"\"\"\n",
     "    此函数用来判断属性集合是否为候选码\n",
     "    ex.\n",
-    "    输入:['A']\n",
+    "    输入:['A'],F\n",
     "    输出:True\n",
     "    输入:['B']\n",
     "    输出:False\n",
     "    输入:['A','B']\n",
     "    输出:False(此为超码而不是候选码)\n",
     "    \"\"\"\n",
-    "    if(set(R).issubset(calculate_single_attribute_closure(alpha))):\n",
+    "    if(set(R).issubset(calculate_single_attribute_closure(alpha,F))):\n",
     "\n",
     "        proper_subsets_of_alpha = get_proper_subsets(alpha)\n",
     "        sorted_proper_subsets_of_alpha = sorted(proper_subsets_of_alpha, key=len, reverse=True)\n",
     "\n",
     "        is_candidate_key = True\n",
     "        for item in sorted_proper_subsets_of_alpha:\n",
-    "            result = calculate_single_attribute_closure(item)\n",
+    "            result = calculate_single_attribute_closure(item,F)\n",
     "            if set(R).issubset(result):\n",
     "                is_candidate_key = False\n",
     "                break\n",
     "        return is_candidate_key\n",
     "    return False\n",
     "\n",
-    "def select_candidate_key():\n",
+    "def select_candidate_key(F):\n",
     "    \"\"\"\n",
     "    此函数用来算出候选码\n",
     "    ex.\n",
@@ -219,20 +211,156 @@
     "    candidate_key_set = []\n",
     "    for alpha, beta in F:\n",
     "        temp = alpha.copy()\n",
-    "        if(determine_candidate_key(alpha)):\n",
+    "        if(determine_candidate_key(alpha,F)):\n",
     "            candidate_key_set.append(temp)\n",
     "    return candidate_key_set\n",
     "\n",
-    "candidate_key_set = select_candidate_key()\n",
+    "candidate_key_set = select_candidate_key(F)\n",
     "\n",
     "print(candidate_key_set)"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 121,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['A'], ['B', 'C']], [['B'], ['C']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def function_dependency_union(F):\n",
+    "    \"\"\"\n",
+    "    此函数返回合并后的函数依赖集合\n",
+    "    ex.\n",
+    "    F 中有 A-->B, B-->C, A-->C\n",
+    "    返回 A-->(B,C) , B-->C\n",
+    "    即 [[['A'], ['B', 'C']], [['B'], ['C']]]\n",
+    "    \"\"\"\n",
+    "    union_F = []\n",
+    "    for alpha, beta in F:\n",
+    "        union_beta = beta.copy()\n",
+    "        for alpha_i, beta_i in F:\n",
+    "            if alpha == alpha_i:\n",
+    "                union_beta.extend([b for b in beta_i if b not in union_beta])\n",
+    "        if [alpha,sorted(union_beta)] not in union_F:\n",
+    "            union_F.append([alpha,sorted(union_beta)])\n",
+    "    return union_F\n",
+    "\n",
+    "F_temperary = [[['A'],['B']],[['B'],['C']],[['A'],['C']]]\n",
+    "\n",
+    "print(function_dependency_union(F_temperary))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['A'], ['B']], [['B'], ['C']], [['A'], ['D']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "union_F = [[['A'], ['B']], [['B'], ['C']], [['A','C'],['D']]]\n",
+    "\n",
+    "def eliminate_left_extraneous(union_F):\n",
+    "    \"\"\" \n",
+    "    此函数用来剔除依赖关系集合F中左侧的extraneous attribute\n",
+    "    \"\"\"\n",
+    "    for i, (alpha, beta) in enumerate(union_F):\n",
+    "        replace = [alpha, beta]\n",
+    "        for subset in get_proper_subsets(alpha):\n",
+    "            if subset:\n",
+    "                temp_union_F = union_F.copy()\n",
+    "                temp_union_F[i] = [subset, beta]\n",
+    "                new_closure = calculate_single_attribute_closure(subset, temp_union_F)\n",
+    "                if set(beta).issubset(new_closure) and (len(subset) < len(replace[0])):\n",
+    "                    replace = [subset, beta]\n",
+    "        union_F[i] = replace\n",
+    "    return union_F\n",
+    "\n",
+    "eli_left_union_F = eliminate_left_extraneous(union_F)\n",
+    "print(eli_left_union_F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['A'], ['B']], [['B'], ['C']], [['A'], ['D']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "union_F = [[['A'], ['B']], [['B'], ['C']], [['A'],['C','D']]]\n",
+    "\n",
+    "def eliminate_right_extraneous(union_F):\n",
+    "    \"\"\" \n",
+    "    此函数用来剔除依赖关系集合F中右侧的extraneous attribute\n",
+    "    \"\"\"\n",
+    "    for i, (alpha, beta) in enumerate(union_F):\n",
+    "        replace = [alpha, beta]\n",
+    "        for subset in get_proper_subsets(beta):\n",
+    "            if subset:\n",
+    "                temp_union_F = union_F.copy()\n",
+    "                temp_union_F[i] = [alpha, subset]\n",
+    "                new_closure = calculate_single_attribute_closure(alpha, temp_union_F)\n",
+    "                if set(beta).issubset(new_closure) and (len(subset) < len(replace[1])):\n",
+    "                    replace = [alpha, subset]\n",
+    "        union_F[i] = replace\n",
+    "    return union_F\n",
+    "\n",
+    "eli_right_union_F = eliminate_right_extraneous(union_F)\n",
+    "print(eli_right_union_F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['A'], ['B']], [['B'], ['C']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "F = [[['A'], ['B','C']], [['B'], ['C']], [['A'], ['B']], [['A','B'], ['C']]]\n",
+    "\n",
+    "def compute_canonical_cover_set(F):\n",
+    "    \"\"\" \n",
+    "    此函数用来获得依赖关系集合F的正则覆盖集\n",
+    "    ex.\n",
+    "    输入:F\n",
+    "    输出:F的正则覆盖集\n",
+    "    \"\"\"\n",
+    "    F = function_dependency_union(F)\n",
+    "    F = eliminate_left_extraneous(F)\n",
+    "    F = function_dependency_union(F)\n",
+    "    F = eliminate_right_extraneous(F)\n",
+    "    return F\n",
+    "\n",
+    "F = compute_canonical_cover_set(F)\n",
+    "print(F)"
+   ]
   }
  ],
  "metadata": {
