更新了暴力算F+的代码 (python版本)

--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,12 +118,13 @@
    "source": [
     "**PART 3 - 计算 函数依赖闭包集合F+**\n",
     "\n",
-    "    算出属性闭包后即可得到函数依赖闭包的近似"
+    "    方法一：算出属性闭包{α+}后即可得到函数依赖闭包F+的近似\n",
+    "    方法二：根据Armstrong's Axioms来得到完整的函数依赖闭包F+"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +148,7 @@
        " [['C', 'E'], ['F']]]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +156,7 @@
    "source": [
     "F = [[['A'],['B']],[['B'],['C','D']],[['D'],['E']],[['C','E'],['F']]]\n",
     "\n",
-    "def calculate_function_dependency_closure_set(F):\n",
+    "def calculate_function_dependency_closure_set_by_attribute_closure_set(F):\n",
     "    \"\"\"\n",
     "    此函数用来计算函数依赖集合闭包F+ \n",
     "    \"\"\"\n",
@@ -166,7 +167,127 @@
     "            function_closure_set.append([alpha, [attribute]])\n",
     "    return function_closure_set\n",
     "\n",
-    "calculate_function_dependency_closure_set(F)\n"
+    "calculate_function_dependency_closure_set_by_attribute_closure_set(F)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[['A'], ['A']],\n",
+       " [['A'], ['B']],\n",
+       " [['A'], ['C']],\n",
+       " [['A'], ['A', 'B']],\n",
+       " [['A'], ['A', 'C']],\n",
+       " [['A'], ['B', 'C']],\n",
+       " [['A'], ['A', 'B', 'C']],\n",
+       " [['B'], ['B']],\n",
+       " [['B'], ['C']],\n",
+       " [['B'], ['B', 'C']],\n",
+       " [['C'], ['C']],\n",
+       " [['A', 'B'], ['B']],\n",
+       " [['A', 'B'], ['C']],\n",
+       " [['A', 'B'], ['A', 'B']],\n",
+       " [['A', 'B'], ['A', 'C']],\n",
+       " [['A', 'B'], ['B', 'C']],\n",
+       " [['A', 'B'], ['A', 'B', 'C']],\n",
+       " [['A', 'C'], ['C']],\n",
+       " [['A', 'C'], ['A', 'C']],\n",
+       " [['A', 'C'], ['B', 'C']],\n",
+       " [['A', 'C'], ['A', 'B', 'C']],\n",
+       " [['B', 'C'], ['C']],\n",
+       " [['B', 'C'], ['B', 'C']],\n",
+       " [['A', 'B', 'C'], ['C']],\n",
+       " [['A', 'B', 'C'], ['A', 'C']],\n",
+       " [['A', 'B', 'C'], ['B', 'C']],\n",
+       " [['A', 'B', 'C'], ['A', 'B', 'C']]]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R = ['A','B','C']\n",
+    "F = [[['A'],['B']], [['B'],['C']]]\n",
+    "\n",
+    "def get_subsets(s):\n",
+    "    \"\"\"\n",
+    "    此函数用来计算集合的子集\n",
+    "    ex.\n",
+    "    输入:['A','B']\n",
+    "    输出:[[],['A'],['B'],['A','B']]\n",
+    "    #这个函数会使传入的s被修改, 需传入s.copy()\n",
+    "    \"\"\"\n",
+    "    if not s:\n",
+    "        return [[]]\n",
+    "    x = s.pop()\n",
+    "    subsets = get_subsets(s)\n",
+    "    return subsets + [subset + [x] for subset in subsets]\n",
+    "\n",
+    "def reflexive_rule(R,F):\n",
+    "    \"\"\"  \n",
+    "    此函数运用Armstrong定理中的Reflexive rule来计算函数依赖闭包集合\n",
+    "    \"\"\"\n",
+    "    new_F = F.copy()\n",
+    "    for attribute in R:\n",
+    "        if [[attribute],[attribute]] not in new_F:\n",
+    "            new_F.append([[attribute],[attribute]])\n",
+    "    return new_F\n",
+    "\n",
+    "def augmentation_rule(R, F):\n",
+    "    \"\"\"  \n",
+    "    此函数运用Armstrong定理中的Augmentation rule来计算函数依赖闭包集合\n",
+    "    \"\"\"\n",
+    "    R_subsets = get_subsets(R.copy())\n",
+    "    R_subsets.remove([])\n",
+    "    new_F = F.copy()\n",
+    "    for alpha, beta in F:\n",
+    "        for subset in R_subsets:\n",
+    "            augmentation_alpha = sorted(list(set(subset) | set(alpha)))\n",
+    "            augmentation_beta = sorted(list(set(subset) | set(beta)))\n",
+    "            if [augmentation_alpha, augmentation_beta] not in new_F:\n",
+    "                new_F.append([augmentation_alpha, augmentation_beta])\n",
+    "    return new_F\n",
+    "\n",
+    "def transitivity_rule(R, F):\n",
+    "    \"\"\"  \n",
+    "    此函数运用Armstrong定理中的Transitivity rule来计算函数依赖闭包集合\n",
+    "    \"\"\"\n",
+    "    new_F = F.copy()\n",
+    "    for alpha, beta in F:\n",
+    "        for alpha_i, beta_i in F:\n",
+    "            if beta == alpha_i and [alpha,beta_i] not in new_F:\n",
+    "                new_F.append([alpha,beta_i])\n",
+    "    return new_F\n",
+    "\n",
+    "def calculate_function_dependency_closure_set_by_armstrong_axioms(R,F):\n",
+    "    \"\"\"  \n",
+    "    此函数运用Armstrong定理来计算函数依赖闭包集合\n",
+    "    输入 R, F\n",
+    "    输出 F+\n",
+    "    \"\"\"\n",
+    "    F = reflexive_rule(R, F)\n",
+    "    F = augmentation_rule(R, F)\n",
+    "    F_original = F.copy()\n",
+    "    while True:\n",
+    "        F = transitivity_rule(R,F)\n",
+    "        if F == F_original:\n",
+    "            break\n",
+    "        else:\n",
+    "            F_original = F\n",
+    "    for i, (alpha, beta) in enumerate(F):\n",
+    "        F[i] = [sorted(alpha), sorted(beta)]\n",
+    "    F.sort(key=lambda x: (len(x[0]), x[0], len(x[1]), x[1]))\n",
+    "    return F\n",
+    "\n",
+    "calculate_function_dependency_closure_set_by_armstrong_axioms(R,F)\n",
+    "\n"
    ]
   },
   {
@@ -181,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,6 +320,7 @@
     "    ex.\n",
     "    输入:['A','B']\n",
     "    输出:[[],['A'],['B'],['A','B']]\n",
+    "    #这个函数会使传入的s被修改, 需传入s.copy()\n",
     "    \"\"\"\n",
     "    if not s:\n",
     "        return [[]]\n",
@@ -274,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
