--- a/ThreeNF.ipynb
+++ b/ThreeNF.ipynb
@@ -5,11 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**PART 1 - 初始化 关系模式R 和 函数依赖集合F**\n",
+    "### **PART 1 用到preparation中的函数**\n",
     "\n",
-    "    例如：\n",
-    "        * R = (ABCDEF)\n",
-    "        * F = {A → B, B → C}"
+    "    例如：  \n",
+    "        * R = (ABCDEF)  \n",
+    "        * F = {A → B, B → CD, D → E, CE → F}  "
    ]
   },
   {
@@ -28,14 +28,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**PART 2 - 计算 属性闭包集合{α+}**\n",
-    "\n",
-    "    先算出单个属性的闭包，再遍历F算出所有属性闭包"
+    "**1.1 求属性闭包**  \n",
+    "1.单个属性  \n",
+    "2.所有属性  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
     "\n",
     "#print all attribute closures\n",
     "for alpha, alpha_closure in attribute_closure_set:\n",
-    "    print(alpha,' --> ',alpha_closure)\n"
+    "    print(alpha,' --> ',alpha_closure)"
    ]
   },
   {
@@ -116,207 +116,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**PART 3 - 计算 函数依赖闭包集合F+**\n",
-    "\n",
-    "    方法一：算出属性闭包{α+}后即可得到函数依赖闭包F+的近似\n",
-    "    方法二：根据Armstrong's Axioms来得到完整的函数依赖闭包F+"
+    "**1.2 求候选码**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[['A'], ['A']],\n",
-       " [['A'], ['B']],\n",
-       " [['A'], ['C']],\n",
-       " [['A'], ['D']],\n",
-       " [['A'], ['E']],\n",
-       " [['A'], ['F']],\n",
-       " [['B'], ['B']],\n",
-       " [['B'], ['C']],\n",
-       " [['B'], ['D']],\n",
-       " [['B'], ['E']],\n",
-       " [['B'], ['F']],\n",
-       " [['D'], ['D']],\n",
-       " [['D'], ['E']],\n",
-       " [['C', 'E'], ['C']],\n",
-       " [['C', 'E'], ['E']],\n",
-       " [['C', 'E'], ['F']]]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "F = [[['A'],['B']],[['B'],['C','D']],[['D'],['E']],[['C','E'],['F']]]\n",
-    "\n",
-    "def calculate_function_dependency_closure_set_by_attribute_closure_set(F):\n",
-    "    \"\"\"\n",
-    "    此函数用来计算函数依赖集合闭包F+ \n",
-    "    \"\"\"\n",
-    "    function_closure_set = []\n",
-    "    attribute_closure_set = calculate_attribute_closure_set(F)\n",
-    "    for alpha, beta in attribute_closure_set:\n",
-    "        for attribute in beta:\n",
-    "            function_closure_set.append([alpha, [attribute]])\n",
-    "    return function_closure_set\n",
-    "\n",
-    "calculate_function_dependency_closure_set_by_attribute_closure_set(F)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x C\n",
-      "x B\n",
-      "x A\n",
-      "subsets [[]]\n",
-      "subsets [[], ['A']]\n",
-      "subsets [[], ['A'], ['B'], ['A', 'B']]\n",
-      "x C\n",
-      "x B\n",
-      "x A\n",
-      "subsets [[]]\n",
-      "subsets [[], ['A']]\n",
-      "subsets [[], ['A'], ['B'], ['A', 'B']]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['A', 'B', 'C']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "R = ['A','B','C']\n",
-    "F = [[['A'],['B']], [['B'],['C']]]\n",
-    "\n",
-    "def get_subsets(s):\n",
-    "    \"\"\"\n",
-    "    此函数用来计算集合的子集\n",
-    "    ex.\n",
-    "    输入:['A','B']\n",
-    "    输出:[[],['A'],['B'],['A','B']]\n",
-    "    #这个函数会使传入的s被修改, 需传入s.copy()\n",
-    "    \"\"\"\n",
-    "    if not s:\n",
-    "        return [[]]\n",
-    "    x = s.pop()\n",
-    "    subsets = get_subsets(s)\n",
-    "    return subsets + [subset + [x] for subset in subsets]\n",
-    "\n",
-    "def reflexive_rule(R,F):\n",
-    "    \"\"\"  \n",
-    "    此函数运用Armstrong定理中的Reflexive rule来计算函数依赖闭包集合\n",
-    "    \"\"\"\n",
-    "    new_F = F.copy()\n",
-    "    for attribute in R:\n",
-    "        if [[attribute],[attribute]] not in new_F:\n",
-    "            new_F.append([[attribute],[attribute]])\n",
-    "    return new_F\n",
-    "\n",
-    "def augmentation_rule(R, F):\n",
-    "    \"\"\"  \n",
-    "    此函数运用Armstrong定理中的Augmentation rule来计算函数依赖闭包集合\n",
-    "    \"\"\"\n",
-    "    R_subsets = get_subsets(R.copy())\n",
-    "    R_subsets.remove([])\n",
-    "    new_F = F.copy()\n",
-    "    for alpha, beta in F:\n",
-    "        for subset in R_subsets:\n",
-    "            augmentation_alpha = sorted(list(set(subset) | set(alpha)))\n",
-    "            augmentation_beta = sorted(list(set(subset) | set(beta)))\n",
-    "            if [augmentation_alpha, augmentation_beta] not in new_F:\n",
-    "                new_F.append([augmentation_alpha, augmentation_beta])\n",
-    "    return new_F\n",
-    "\n",
-    "def transitivity_rule(R, F):\n",
-    "    \"\"\"  \n",
-    "    此函数运用Armstrong定理中的Transitivity rule来计算函数依赖闭包集合\n",
-    "    \"\"\"\n",
-    "    new_F = F.copy()\n",
-    "    for alpha, beta in F:\n",
-    "        for alpha_i, beta_i in F:\n",
-    "            if beta == alpha_i and [alpha,beta_i] not in new_F:\n",
-    "                new_F.append([alpha,beta_i])\n",
-    "    return new_F\n",
-    "\n",
-    "def calculate_function_dependency_closure_set_by_armstrong_axioms(R,F):\n",
-    "    \"\"\"  \n",
-    "    此函数运用Armstrong定理来计算函数依赖闭包集合\n",
-    "    输入 R, F\n",
-    "    输出 F+\n",
-    "    \"\"\"\n",
-    "    F = reflexive_rule(R, F)\n",
-    "    F = augmentation_rule(R, F)\n",
-    "    F_original = F.copy()\n",
-    "    while True:\n",
-    "        F = transitivity_rule(R,F)\n",
-    "        if F == F_original:\n",
-    "            break\n",
-    "        else:\n",
-    "            F_original = F\n",
-    "    for i, (alpha, beta) in enumerate(F):\n",
-    "        F[i] = [sorted(alpha), sorted(beta)]\n",
-    "    F.sort(key=lambda x: (len(x[0]), x[0], len(x[1]), x[1]))\n",
-    "    return F\n",
-    "\n",
-    "calculate_function_dependency_closure_set_by_armstrong_axioms(R,F)\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**PART 4 - 计算 候选码Candidat key**\n",
-    "\n",
-    "    候选码是最小的超码"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['A']\n",
-      "R ['A', 'B', 'C']\n",
-      "sorted_proper_subsets_of_alpha [[]]\n",
-      "['B']\n",
-      "R ['B', 'C']\n",
       "[['A']]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[[['A'], ['B']], [['B'], ['C']]]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -380,7 +193,7 @@
     "    \"\"\"\n",
     "    candidate_key_set = []\n",
     "    for alpha, beta in F:\n",
-    "        print(alpha)\n",
+    "        #print(alpha)\n",
     "        temp = alpha.copy()\n",
     "        if(determine_candidate_key(alpha,F,R)):\n",
     "            candidate_key_set.append(temp)\n",
@@ -388,8 +201,7 @@
     "\n",
     "candidate_key_set = select_candidate_key(F)\n",
     "\n",
-    "print(candidate_key_set)\n",
-    "#F"
+    "print(candidate_key_set)"
    ]
   },
   {
@@ -397,24 +209,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**PART 5 - 计算 正则覆盖集Canonical cover set**\n",
-    "\n",
-    "    对于 α → β，先合并α相同的依赖，再剔除α和β中的extraneous attribute(s)"
+    "**1.3 求Fc**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[['A'], ['B', 'C']], [['B'], ['C']]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def function_dependency_union(F):\n",
     "    \"\"\"\n",
@@ -434,27 +236,6 @@
     "            union_F.append([alpha,sorted(union_beta)])\n",
     "    return union_F\n",
     "\n",
-    "F_temperary = [[['A'],['B']],[['B'],['C']],[['A'],['C']]]\n",
-    "\n",
-    "print(function_dependency_union(F_temperary))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[['A'], ['B']], [['B'], ['C']], [['A'], ['D']]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "union_F = [[['A'], ['B']], [['B'], ['C']], [['A','C'],['D']]]\n",
-    "\n",
     "def eliminate_left_extraneous(union_F):\n",
     "    \"\"\" \n",
     "    此函数用来剔除依赖关系集合F中左侧的extraneous attribute\n",
@@ -468,26 +249,6 @@
     "                    replace = [subset, beta]\n",
     "        union_F[i] = replace\n",
     "    return union_F\n",
-    "\n",
-    "eli_left_union_F = eliminate_left_extraneous(union_F)\n",
-    "print(eli_left_union_F)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[['A'], ['B']], [['B'], ['C']], [['A'], ['D']]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "union_F = [[['A'], ['B']], [['B'], ['C']], [['A'],['C','D']]]\n",
     "\n",
     "def eliminate_right_extraneous(union_F):\n",
     "    \"\"\" \n",
@@ -505,26 +266,6 @@
     "        union_F[i] = replace\n",
     "    return union_F\n",
     "\n",
-    "eli_right_union_F = eliminate_right_extraneous(union_F)\n",
-    "print(eli_right_union_F)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[['A'], ['B']], [['B'], ['C']]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "F = [[['A'], ['B','C']], [['B'], ['C']], [['A'], ['B']], [['A','B'], ['C']]]\n",
-    "\n",
     "def compute_canonical_cover_set(F):\n",
     "    \"\"\" \n",
     "    此函数用来获得依赖关系集合F的正则覆盖集\n",
@@ -536,16 +277,286 @@
     "    F = eliminate_left_extraneous(F)\n",
     "    F = function_dependency_union(F)\n",
     "    F = eliminate_right_extraneous(F)\n",
-    "    return F\n",
+    "    return F"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **PART2 3NF判断**\n",
+    "    1. beta_belong_alpha(alpha,beta) return bool  \n",
+    "    2. alpha_is_superKey(alpha,F,R)    return bool  \n",
+    "    3. b_minus_a_contain_candidatKey(alpha,beta,F,R) return bool  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def beta_belong_alpha(alpha,beta):\n",
+    "    '''\n",
+    "    此函数用来判断beta是否属于alpha\n",
+    "    return bool\n",
+    "    '''\n",
+    "    return set(beta).issubset(set(alpha))\n",
+    "beta_belong_alpha(['A','B'],['A','B','C'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def alpha_is_superKey(alpha,F,R):\n",
+    "    '''\n",
+    "    此函数用来判断alpha是否为超码\n",
+    "    return bool\n",
+    "    '''\n",
+    "    alpha_closure=calculate_single_attribute_closure(alpha,F)\n",
+    "    return set(R).issubset(set(alpha_closure))\n",
+    "alpha_is_superKey(['A'],F,R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def b_minus_a_contain_candidatKey(alpha,beta,F,R):\n",
+    "    '''\n",
+    "    此函数用来判断beta-alpha是否包含于某个候选码中\n",
+    "    return bool\n",
+    "    '''\n",
+    "    a_set=set(alpha)\n",
+    "    b_set=set(beta)\n",
+    "    b_minus_a=list(b_set-a_set)\n",
+    "    candidatK=select_candidate_key(F)\n",
+    "    return b_minus_a in candidatK\n",
     "\n",
-    "F = compute_canonical_cover_set(F)\n",
-    "print(F)"
+    "alpha=['B']\n",
+    "beta=['A']\n",
+    "b_minus_a_contain_candidatKey(alpha,beta,F,R)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[['B'], ['C', 'D']], [['D'], ['E']], [['C', 'E'], ['F']]]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def test3NF(F,R):\n",
+    "    '''\n",
+    "    此函数用来测试表是否符合3NF\n",
+    "    return 破坏3NF的函数依赖关系\n",
+    "    当输出为[]时，代表表符合3NF\n",
+    "    '''\n",
+    "    break_F=[]\n",
+    "    for alpha,beta in F:\n",
+    "        if((not beta_belong_alpha(alpha,beta) and not alpha_is_superKey(alpha,F,R)and not b_minus_a_contain_candidatKey(alpha,beta,F,R))):\n",
+    "            break_F.append([alpha,beta])            \n",
+    "    return break_F\n",
+    "test3NF(F,R)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **PART3 做3NF分解**\n",
+    "    思路：  \n",
+    "        1.算Fc  \n",
+    "        2.每个依赖用一张表保存  \n",
+    "        3.求候选码  \n",
+    "        4.判断需不需要给候选码建表  \n",
+    "        5.删表:del_element(result)  return 删后的表\n",
+    "        6.输出  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3], [1, 3, 4]]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def del_element(result):\n",
+    "    '''\n",
+    "    此函数用来删除有重复元素的表\n",
+    "    return 删后的表\n",
+    "    '''\n",
+    "    result.sort(key = lambda result:len(result))\n",
+    "    i=0\n",
+    "    while(i<(len(result))):\n",
+    "        temp=result.copy()\n",
+    "        result.pop(i)\n",
+    "        state=False\n",
+    "        for subs in result:\n",
+    "            if(set(temp[i]).issubset(set(subs))):\n",
+    "                state=True\n",
+    "            if(not state):\n",
+    "                result=temp\n",
+    "                i+=1 \n",
+    "    return result\n",
+    "a=[[1],[1,2],[1,2,3],[1,3,4],[1,4]]\n",
+    "del_element(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F [[[1, 2], [3, 4]], [[2], [3]], [[1, 3], [2]]]\n",
+      "R [1, 2, 3, 4]\n",
+      "[[1, 2, 4], [1, 3, 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def decomposition3NF(F,R):\n",
+    "    '''\n",
+    "    此函数用来根据3NF拆表\n",
+    "    return 拆后的表\n",
+    "    '''\n",
+    "    result=[]\n",
+    "    Fc=compute_canonical_cover_set(F)\n",
+    "    for alpha,beta in Fc:\n",
+    "        result.append(alpha+beta)\n",
+    "    candidatK=select_candidate_key(F)\n",
+    "    for canK in candidatK:\n",
+    "        result.append(canK)\n",
+    "    #print(result)\n",
+    "    result=del_element(result)\n",
+    "    return result\n",
+    "\n",
+    "F=[[[1,2],[3,4]],[[2],[3]],[[1,3],[2]]]\n",
+    "R=[1,2,3,4]\n",
+    "print(\"F\",F)\n",
+    "print(\"R\",R)\n",
+    "print(decomposition3NF(F,R))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **PART4 汇总**\n",
+    "先test再拆"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "存在函数依赖破坏3NF。\n",
+      "破坏3NF的函数依赖： [[[2], [3]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 4], [1, 3, 2]]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def threeNF(F,R):\n",
+    "    '''\n",
+    "    此函数整合3NF的函数，先检验，再生成符合3NF的表\n",
+    "    输出是否破坏3NF，如果破坏，哪些函数依赖破坏3NF。\n",
+    "    return 符合3NF的表\n",
+    "    '''\n",
+    "    breakList=test3NF(F,R)\n",
+    "    if(breakList!=[]):\n",
+    "        print(\"存在函数依赖破坏3NF。\")\n",
+    "        print(\"破坏3NF的函数依赖：\",breakList)\n",
+    "        return decomposition3NF(F,R)\n",
+    "    else:\n",
+    "        print(\"该表符合3NF。\")\n",
+    "        return R\n",
+    "\n",
+    "threeNF(F,R)       "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Anaconda20230403",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
