--- a/bcnf.ipynb
+++ b/bcnf.ipynb
@@ -2,7 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 146,
+   "outputs": [],
+   "source": [
+    "from preparation import *\n",
+    "import copy"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,354 +28,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
+   "execution_count": 147,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
    "outputs": [],
    "source": [
-    "def calculate_single_attribute_closure(original_alpha, F):\n",
-    "    \"\"\"\n",
-    "    此函数用于计算单个属性的属性闭包\n",
-    "    ex:\n",
-    "    输入:['A'], F\n",
-    "    输出:['A','B','C','D','E','F'] \n",
-    "    \"\"\"\n",
-    "    alpha = original_alpha.copy()\n",
-    "    if alpha == []:\n",
-    "        return []\n",
-    "    result = alpha.copy()\n",
-    "    while True:\n",
-    "        for alpha_i, beta_i in F:\n",
-    "            #for α_i-->β_i, if α_i ⊂ result \n",
-    "            if set(alpha_i).issubset(result):\n",
-    "                # result = result ∪ α_i\n",
-    "                result.extend([b for b in beta_i if b not in result])\n",
-    "        #if not changed after a loop, the calculation is finished \n",
-    "        # 结果不再改变，说明属性闭包计算完成\n",
-    "        if result == alpha:\n",
-    "            break\n",
-    "        #if not finished, update alpha and continue calculations and comparisons \n",
-    "        # 结果有所改变，继续计算和比较 \n",
-    "        alpha = result \n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['A']  -->  ['A', 'B', 'C', 'D', 'E', 'F']\n",
-      "['B']  -->  ['B', 'C', 'D', 'E', 'F']\n",
-      "['D']  -->  ['D', 'E']\n",
-      "['C', 'E']  -->  ['C', 'E', 'F']\n"
-     ]
-    }
-   ],
-   "source": [
-    "def calculate_attribute_closure_set( F ):\n",
-    "    \"\"\"\n",
-    "    用来计算所有的属性闭包\n",
-    "    ex.\n",
-    "    输入:函数依赖集合F\n",
-    "    输出: \n",
-    "    ['A']  -->  ['A', 'B', 'C', 'D', 'E', 'F']\n",
-    "    ['B']  -->  ['B', 'C', 'D', 'E', 'F']\n",
-    "    ['D']  -->  ['D', 'E']\n",
-    "    ['C', 'E']  -->  ['C', 'E', 'F']\n",
-    "    \"\"\"\n",
-    "    #to store all attribute closures 用与存储所有的属性闭包\n",
-    "    attribute_closure_set = []\n",
-    "    for alpha, beta in F:\n",
-    "        result = calculate_single_attribute_closure(alpha, F)\n",
-    "        #to eliminate duplicate attribute closure 若属性闭包未重复，则添加\n",
-    "        if [alpha,sorted(result)] not in attribute_closure_set:\n",
-    "            attribute_closure_set.append([alpha,sorted(result)])\n",
-    "    return attribute_closure_set \n",
+    "class NF:\n",
+    "    def __init__(self,R,F):\n",
+    "        self.R = R\n",
+    "        self.F =F\n",
     "\n",
-    "#calculate all attribute closures\n",
-    "attribute_closure_set = calculate_attribute_closure_set( F ) \n",
-    "\n",
-    "#print all attribute closures\n",
-    "for alpha, alpha_closure in attribute_closure_set:\n",
-    "    print(alpha,' --> ',alpha_closure)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bad F:\n",
-      "['B']  -->  ['C', 'D']\n",
-      "['D']  -->  ['E']\n",
-      "['C', 'E']  -->  ['F']\n",
-      "good F:\n",
-      "['A']  -->  ['B']\n"
-     ]
-    }
-   ],
-   "source": [
-    "def calculate_bad_and_good_F(F):\n",
-    "    \"\"\"\n",
-    "    Find \"bad\" F and \"good\" F for BCNF\n",
-    "    # do it after calculation of attribute_closure_set is finished\n",
-    "    此函数用于计算完所有属性的闭包后, 根据是否为R的超集分成满足或不满足BCNF的函数依赖\n",
-    "    \"\"\"\n",
-    "    bad_F = []\n",
-    "    good_F = []\n",
-    "    for alpha, alpha_closure in attribute_closure_set:\n",
-    "        for F_alpha, F_beta in F:\n",
-    "            if F_alpha == alpha and not set(R).issubset(alpha_closure):\n",
-    "                bad_F.append([F_alpha, F_beta])\n",
-    "            if F_alpha == alpha and set(R).issubset(alpha_closure):\n",
-    "                good_F.append([F_alpha, F_beta])\n",
-    "    return bad_F, good_F\n",
-    "\n",
-    "bad_F, good_F = calculate_bad_and_good_F(F)\n",
-    "        \n",
-    "# Print bad F\n",
-    "print(\"Bad F:\")\n",
-    "for bad_F_alpha, bad_F_beta in bad_F:\n",
-    "    print(bad_F_alpha,' --> ',bad_F_beta)\n",
-    "\n",
-    "# Print good F\n",
-    "print(\"good F:\")\n",
-    "for good_F_alpha, good_F_beta in good_F:\n",
-    "    print(good_F_alpha,' --> ',good_F_beta)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['A']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def get_subsets(s):\n",
-    "    \"\"\"\n",
-    "    此函数用来计算集合的子集\n",
-    "    ex.\n",
-    "    输入:['A','B']\n",
-    "    输出:[[],['A'],['B'],['A','B']]\n",
-    "    \"\"\"\n",
-    "    if not s:\n",
-    "        return [[]]\n",
-    "    x = s.pop()\n",
-    "    subsets = get_subsets(s)\n",
-    "    return subsets + [subset + [x] for subset in subsets]\n",
-    "\n",
-    "def get_proper_subsets(s):\n",
-    "    \"\"\"\n",
-    "    此函数用来计算集合的真子集\n",
-    "    ex.\n",
-    "    输入:['A','B']\n",
-    "    输出:[[],['A'],['B']]\n",
-    "    \"\"\"\n",
-    "    s_copy = s.copy()\n",
-    "    temp = s.copy()\n",
-    "    subsets = get_subsets(temp)\n",
-    "    subsets.remove(s_copy)\n",
-    "    return subsets\n",
-    "\n",
-    "def determine_candidate_key(alpha,F):\n",
-    "    \"\"\"\n",
-    "    此函数用来判断属性集合是否为候选码\n",
-    "    ex.\n",
-    "    输入:['A'],F\n",
-    "    输出:True\n",
-    "    输入:['B']\n",
-    "    输出:False\n",
-    "    输入:['A','B']\n",
-    "    输出:False(此为超码而不是候选码)\n",
-    "    \"\"\"\n",
-    "    if(set(R).issubset(calculate_single_attribute_closure(alpha,F))):\n",
-    "\n",
-    "        proper_subsets_of_alpha = get_proper_subsets(alpha)\n",
-    "        sorted_proper_subsets_of_alpha = sorted(proper_subsets_of_alpha, key=len, reverse=True)\n",
-    "\n",
-    "        is_candidate_key = True\n",
-    "        for item in sorted_proper_subsets_of_alpha:\n",
-    "            result = calculate_single_attribute_closure(item,F)\n",
-    "            if set(R).issubset(result):\n",
-    "                is_candidate_key = False\n",
+    "    def check_NontrivialDependencyCaseViolationOfBCNF(self,s,schemaR):\n",
+    "        \"\"\"\n",
+    "        检查不常用（non-trivial）依赖s是否导致不符合BCNF\n",
+    "        :param s:F中的一个依赖\n",
+    "        schemaR:list\n",
+    "        :return:boolean,True:符合BC范式；False：违背BC范式\n",
+    "        \"\"\"\n",
+    "        s_plus_set = set(calculate_single_attribute_closure(s[0],self.F))\n",
+    "        R_set = set(schemaR)\n",
+    "        return R_set.issubset(s_plus_set)\n",
+    "        # return schemaR.issubset(s_plus_set)\n",
+    "    def check_schemaInBCNF(self,schemaR:list):\n",
+    "        result = True\n",
+    "        for i in self.F:\n",
+    "            alpha_set = set(i[0])\n",
+    "            beta_set = set(i[1])\n",
+    "            if(not beta_set.issubset(alpha_set) and not self.check_NontrivialDependencyCaseViolationOfBCNF(i,schemaR)):\n",
+    "                result = False\n",
     "                break\n",
-    "        return is_candidate_key\n",
-    "    return False\n",
+    "        return result\n",
     "\n",
-    "def select_candidate_key(F):\n",
-    "    \"\"\"\n",
-    "    此函数用来算出候选码\n",
-    "    ex.\n",
-    "    输出:['A']\n",
-    "    \"\"\"\n",
-    "    candidate_key_set = []\n",
-    "    for alpha, beta in F:\n",
-    "        temp = alpha.copy()\n",
-    "        if(determine_candidate_key(alpha,F)):\n",
-    "            candidate_key_set.append(temp)\n",
-    "    return candidate_key_set\n",
+    "    def BCNF(self):\n",
+    "        # R_set = set(self.R)\n",
+    "        result = [self.R]\n",
+    "        done = False\n",
+    "        test = 0\n",
+    "        while(not done):\n",
+    "            allBCNF = True\n",
     "\n",
-    "candidate_key_set = select_candidate_key(F)\n",
-    "\n",
-    "print(candidate_key_set)"
-   ]
+    "            for i in range(len(result)):\n",
+    "                temp_R = result[i]#list\n",
+    "                temp_R_set = set(temp_R)\n",
+    "                temp_done = False\n",
+    "                if(not self.check_schemaInBCNF(temp_R)):##\n",
+    "                    # allBCNF = False\n",
+    "                    for s in self.F:\n",
+    "                        alpha =s[0]#list\n",
+    "                        beta = s[1]#list\n",
+    "                        alpha_set = set(alpha)\n",
+    "                        beta_set = set(beta)\n",
+    "                        # print(temp_R,'\\n',alpha,beta,'\\t')\n",
+    "                        if alpha_set.union(beta_set).issubset(temp_R_set):#alpha->beta 是Ri上的函数依赖\n",
+    "                            # print(alpha_set.union(beta_set).issubset(temp_R_set))\n",
+    "                            if not beta_set.issubset(alpha_set):#alpha->beta 是非平凡函数依赖\n",
+    "                                if alpha_set.isdisjoint(beta_set):#alpha和beta的交集为空\n",
+    "                                    temp = True\n",
+    "                                    alpha_plus = set(calculate_single_attribute_closure(list(alpha),self.F))\n",
+    "                                    if temp_R_set.issubset(alpha_plus):\n",
+    "                                        temp = False\n",
+    "                                    if temp:\n",
+    "                                        test += 1\n",
+    "                                        allBCNF = False\n",
+    "                                        result.remove(temp_R)\n",
+    "                                        result.append(list(temp_R_set.difference(beta_set)))\n",
+    "                                        result.append(list(alpha_set.union(beta_set)))\n",
+    "                                        temp_done = True\n",
+    "                                        break\n",
+    "                if temp_done:\n",
+    "                    break\n",
+    "            print(result,'\\t',test)\n",
+    "            if(allBCNF):\n",
+    "                done = True\n",
+    "        return result"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
+   "execution_count": 149,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[['A'], ['B', 'C']], [['B'], ['C']]]\n"
+      "[1, 2, 3, 4, 5, 6] [[[2], [6]], [[3, 5], [2]], [[3], [1]], [[3, 5], [6]], [[2], [4]], [[3], [4]]]\n"
      ]
     }
    ],
    "source": [
-    "def function_dependency_union(F):\n",
-    "    \"\"\"\n",
-    "    此函数返回合并后的函数依赖集合\n",
-    "    ex.\n",
-    "    F 中有 A-->B, B-->C, A-->C\n",
-    "    返回 A-->(B,C) , B-->C\n",
-    "    即 [[['A'], ['B', 'C']], [['B'], ['C']]]\n",
-    "    \"\"\"\n",
-    "    union_F = []\n",
-    "    for alpha, beta in F:\n",
-    "        union_beta = beta.copy()\n",
-    "        for alpha_i, beta_i in F:\n",
-    "            if alpha == alpha_i:\n",
-    "                union_beta.extend([b for b in beta_i if b not in union_beta])\n",
-    "        if [alpha,sorted(union_beta)] not in union_F:\n",
-    "            union_F.append([alpha,sorted(union_beta)])\n",
-    "    return union_F\n",
-    "\n",
-    "F_temperary = [[['A'],['B']],[['B'],['C']],[['A'],['C']]]\n",
-    "\n",
-    "print(function_dependency_union(F_temperary))\n"
-   ]
+    "R = [i for i in range(1,12)]\n",
+    "F = [[[1],[2,3,4]],[[8,9],[10]],[[1,5,6,7],[8,9,11]]]\n",
+    "#answer:[{1, 2, 3, 4}, {8, 9, 10}, {1, 5, 6, 7, 8, 9, 11}, set()]\n",
+    "# R = [i for i in range(1,6,1)]\n",
+    "# F = [[[1],[2]],[[2,3],[4]]]\n",
+    "# R = [i for i in range(1,4,1)]\n",
+    "# F = [[[1],[2]],[[2],[3]]]\n",
+    "R = [i for i in range(1,7)]\n",
+    "F = [[[2],[6]],[[3,5],[2]],[[3],[1]],[[3,5],[6]],[[2],[4]],[[3],[4]]]\n",
+    "print(R,F)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
+   "execution_count": 150,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[['A'], ['B']], [['B'], ['C']], [['A'], ['D']]]\n"
+      "[[1, 2, 3, 4, 5], [2, 6]] \t 1\n",
+      "[[2, 6], [2, 3, 4, 5], [1, 3]] \t 2\n",
+      "[[2, 6], [1, 3], [2, 3, 5], [2, 4]] \t 3\n",
+      "[[2, 6], [1, 3], [2, 3, 5], [2, 4]] \t 3\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "[[2, 6], [1, 3], [2, 3, 5], [2, 4]]"
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "union_F = [[['A'], ['B']], [['B'], ['C']], [['A','C'],['D']]]\n",
-    "\n",
-    "def eliminate_left_extraneous(union_F):\n",
-    "    \"\"\" \n",
-    "    此函数用来剔除依赖关系集合F中左侧的extraneous attribute\n",
-    "    \"\"\"\n",
-    "    for i, (alpha, beta) in enumerate(union_F):\n",
-    "        replace = [alpha, beta]\n",
-    "        for subset in get_proper_subsets(alpha):\n",
-    "            if subset:\n",
-    "                temp_union_F = union_F.copy()\n",
-    "                temp_union_F[i] = [subset, beta]\n",
-    "                new_closure = calculate_single_attribute_closure(subset, temp_union_F)\n",
-    "                if set(beta).issubset(new_closure) and (len(subset) < len(replace[0])):\n",
-    "                    replace = [subset, beta]\n",
-    "        union_F[i] = replace\n",
-    "    return union_F\n",
-    "\n",
-    "eli_left_union_F = eliminate_left_extraneous(union_F)\n",
-    "print(eli_left_union_F)"
-   ]
+    "nf = NF(R,F)\n",
+    "# print(nf.R,nf.F)\n",
+    "# print(nf.BCNF())\n",
+    "nf.BCNF()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
+   "execution_count": 151,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[['A'], ['B']], [['B'], ['C']], [['A'], ['D']]]\n"
+      "[[1, 2, 3, 4, 5], [2, 6]] \t 1\n",
+      "[[2, 6], [2, 3, 4, 5], [1, 3]] \t 2\n",
+      "[[2, 6], [1, 3], [2, 3, 5], [2, 4]] \t 3\n",
+      "[[2, 6], [1, 3], [2, 3, 5], [2, 4]] \t 3\n",
+      "[[2, 6], [1, 3], [2, 3, 5], [2, 4]]\n"
      ]
     }
    ],
    "source": [
-    "union_F = [[['A'], ['B']], [['B'], ['C']], [['A'],['C','D']]]\n",
-    "\n",
-    "def eliminate_right_extraneous(union_F):\n",
-    "    \"\"\" \n",
-    "    此函数用来剔除依赖关系集合F中右侧的extraneous attribute\n",
-    "    \"\"\"\n",
-    "    for i, (alpha, beta) in enumerate(union_F):\n",
-    "        replace = [alpha, beta]\n",
-    "        for subset in get_proper_subsets(beta):\n",
-    "            if subset:\n",
-    "                temp_union_F = union_F.copy()\n",
-    "                temp_union_F[i] = [alpha, subset]\n",
-    "                new_closure = calculate_single_attribute_closure(alpha, temp_union_F)\n",
-    "                if set(beta).issubset(new_closure) and (len(subset) < len(replace[1])):\n",
-    "                    replace = [alpha, subset]\n",
-    "        union_F[i] = replace\n",
-    "    return union_F\n",
-    "\n",
-    "eli_right_union_F = eliminate_right_extraneous(union_F)\n",
-    "print(eli_right_union_F)"
-   ]
+    "print(nf.BCNF())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[['A'], ['B']], [['B'], ['C']]]\n"
-     ]
+   "execution_count": 151,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ],
-   "source": [
-    "F = [[['A'], ['B','C']], [['B'], ['C']], [['A'], ['B']], [['A','B'], ['C']]]\n",
-    "\n",
-    "def compute_canonical_cover_set(F):\n",
-    "    \"\"\" \n",
-    "    此函数用来获得依赖关系集合F的正则覆盖集\n",
-    "    ex.\n",
-    "    输入:F\n",
-    "    输出:F的正则覆盖集\n",
-    "    \"\"\"\n",
-    "    F = function_dependency_union(F)\n",
-    "    F = eliminate_left_extraneous(F)\n",
-    "    F = function_dependency_union(F)\n",
-    "    F = eliminate_right_extraneous(F)\n",
-    "    return F\n",
-    "\n",
-    "F = compute_canonical_cover_set(F)\n",
-    "print(F)"
-   ]
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
